refactor unit tests, clock